# TimelineWidget

./: CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
Extensions/: ExtensionMethods.h  IntervalWatcher.h  JsonSerialization.h  XmlSerialization.h  json.h  reflection.h  xml.h
Extensions/detail/: itoa.h  string_stream.h  traits.h
Headers/: SelfContainedScenesView.h  TimelineDataManager.h  TimelineDefination.h  timelinewidget.h
Headers/Clip/: ClipDragHandle.h  ClipItem.h  ShadowClipItem.h  clipdraghandle.h
Headers/MimeData/: ClipMime.h  ClipRange.h  TimelineMime.h  TrackMime.h  clipmime.h  cliprange.h  timelinemime.h  trackmime.h
Headers/Ruler/: AnchorHeadItem.h  RulerDrawingView.h  RulerItem.h  anchorheaditem.h  ruleritem.h
Headers/Tick/: TickDrawingView.h  TickItem.h  tickdrawingview.h  tickitem.h
Headers/TrackBody/: AnchorBodyItem.h  TrackBodyDrawingView.h  TrackBodyItem.h  TrackSelectionItem.h  anchorbodyitem.h  trackbodydrawingview.h  trackbodyitem.h
Headers/TrackHead/: TrackHeadDrawingView.h  TrackHeadItem.h  trackheaddrawingview.h
Sources/: TimelineDataManager.cpp  timelinewidget.cpp
Sources/Clip/: ClipDragHandle.cpp  ClipItem.cpp  ShadowClipItem.cpp  clipdraghandle.cpp
Sources/MimeData/: ClipRange.cpp  TrackMime.cpp
Sources/Ruler/: AnchorHeadItem.cpp  RulerDrawingView.cpp  RulerItem.cpp  anchorheaditem.cpp
Sources/Tick/: TickDrawingView.cpp  TickItem.cpp  tickdrawingview.cpp
Sources/TrackBody/: AnchorBodyItem.cpp  TrackBodyDrawingView.cpp  TrackBodyItem.cpp  TrackSelectionItem.cpp  trackbodyitem.cpp
Sources/TrackHead/: TrackHeadDrawingView.cpp  TrackHeadItem.cpp  trackheaddrawingview.cpp  trackheaditem.cpp
extensions/: extensionmethods.h  intervalwatcher.h  json.h  jsonserialization.h
forms/: timelinewidget.ui
headers/: selfcontainedscenesview.h  timelinedefination.h  timelinewidget.h
headers/clip/: clipitem.h  shadowclipitem.h
headers/mimedata/: clipmime.h  cliprange.h  timelinemime.h  trackmime.h
headers/ruler/: anchorheaditem.h  rulerdrawingview.h  ruleritem.h
headers/tick/: tickdrawingview.h  tickitem.h
headers/trackbody/: anchorbodyitem.h  trackbodydrawingview.h  trackbodyitem.h  trackselectionitem.h
headers/trackhead/: trackheaddrawingview.h  trackheaditem.h
sources/: timelinewidget.cpp
sources/clip/: clipdraghandle.cpp  clipitem.cpp  shadowclipitem.cpp
sources/mimedata/: cliprange.cpp
sources/ruler/: anchorheaditem.cpp  rulerdrawingview.cpp  ruleritem.cpp
sources/tick/: tickitem.cpp
sources/trackbody/: anchorbodyitem.cpp  trackbodydrawingview.cpp  trackbodyitem.cpp  trackselectionitem.cpp
sources/trackhead/: trackheaddrawingview.cpp  trackheaditem.cpp
